<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DK Player</string>
    <string name="video_resize_fit">Fit</string>
    <string name="video_resize_crop">Crop</string>
    <string name="video_orientation_video">Video orientation</string>
    <string name="video_orientation_sensor">Auto-rotate</string>
    <string name="video_orientation_system">Device orientation</string>
    <string name="onboarding_open_title">Choose a video to play</string>
    <string name="onboarding_open_description">Tap to open a video file. Long tap to load external subtitles.</string>
    <string name="open_subtitles">Load subtitles</string>
    <string name="error_details">Details</string>
    <string name="error_files_missing">Files app is disabled or missing</string>
    <string name="request_scope">To automatically load external subtitles or enable skipping to next file in a directory, grant %s access to the topmost folder containing your videos (e.g. Movies).</string>
    <string name="delete_query">Delete this file\?</string>
    <string name="delete_confirmation">Delete</string>
    <string name="pref_title">Settings</string>
    <string name="pref_general_header">General</string>
    <string name="pref_framerate_matching">Auto frame rate matching</string>
    <string name="pref_framerate_matching_on">Switch display refresh rate to match video frame rate</string>
    <string name="pref_framerate_matching_off">Do not change display refresh rate</string>
    <string name="pref_tunneling">Tunneled playback</string>
    <string name="pref_tunneling_summary">Tunneling provides better support for 4K/HDR content, but may not work on all devices</string>
    <string name="pref_auto_pip">Auto picture-in-picture</string>
    <string name="pref_auto_pip_on">Switch to PiP when leaving the app</string>
    <string name="pref_auto_pip_off">Do not automatically switch to PiP</string>
    <string name="pref_skip_silence">Skip silence</string>
    <string name="pref_skip_silence_on">Skip parts with silence on the audio stream</string>
    <string name="pref_skip_silence_off">Play content as is</string>
    <string name="pref_repeat_toggle">Repeat toggle</string>
    <string name="pref_repeat_toggle_summary">Extra control to allow indefinitely loop video (requires app restart)</string>
    <string name="pref_map_dv7">Dolby Vision profile 7 fallback</string>
    <string name="pref_map_dv7_on">Play Dolby Vision profile 7 content on HDR displays</string>
    <string name="pref_map_dv7_off">Play UHD Blu-ray content containing Dolby Vision as is</string>
    <string name="shortcut_videos">Videos</string>
    <string name="button_open">Open</string>
    <string name="button_crop">Resize</string>
    <string name="button_rotate">Rotate</string>
    <string name="button_pip">Picture-in-picture</string>
    <string name="pref_file_access">File access</string>
    <string name="pref_file_access_auto">Auto</string>
    <string name="mediastore_empty">No indexed video files found. To access video files in given storage, enable automatic media scanning in system settings.</string>
    <string name="pref_dangerous_header">Dangerous ⚠️</string>
    <string name="pref_dangerous_warning">Switching options in this category may break playback of normally compatible content</string>
    <string name="pref_shortcuts_header">Shortcuts</string>
    <string name="pref_captioning_preferences">Captioning preferences</string>
    <string name="pref_decoder_priority">Decoder priority</string>
    <string name="pref_decoder_priority_prefer_device">Prefer device decoders (default)</string>
    <string name="pref_decoder_priority_prefer_app">Prefer app decoders</string>
    <string name="pref_decoder_priority_only_device">Device decoders only</string>
    <string name="pref_language_header">Language</string>
    <string name="pref_language_subtitle">Default subtitle track</string>
    <string name="pref_language_audio">Default audio track</string>
    <string name="pref_language_track_none">None</string>
    <string name="pref_language_track_device">Device languages</string>
    <string name="pref_language_track_default">Media file default</string>
    <string name="video_player">Video Player</string>
    <string name="music_player">Music Player</string>
    <string name="trim_video">Trim Video</string>
    <string name="secure_folder">Secure Folder</string>
    <string name="video_downloader">Video Downloader</string>
    <string name="settings">Settings</string>
    <string name="video_player_description">Choose video for playing</string>
    <string name="music_player_description">Choose music/mp3 file for playing</string>
    <string name="trim_video_description">Open video for trimming</string>
    <string name="secure_folder_description">Keep videos secured</string>
    <string name="video_downloader_description">Enter url for downloading video</string>
    <string name="settings_description">Personalize the player</string>
    <string name="request_biometric_dialog_title">Biometric for secure folder</string>
    <string name="request_biometric_dialog_message">Please set up biometric for enable  secure folder, do you agree?</string>
    <string name="biometric_prompt_title">Biometric for open secure folder</string>
    <string name="biometric_prompt_subtitle">Open securefolder by using your biometric credential</string>
    <string name="download">Download</string>
    <string name="example_url">Ex: \"http://videos-bucket/sample/BigBuckBunny.mp4\"</string>
    <string name="video_example_uri">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
</resources>