<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_general_header">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/file_access_entries"
            app:entryValues="@array/file_access_values"
            app:iconSpaceReserved="false"
            app:key="fileAccess"
            app:title="@string/pref_file_access"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="frameRateMatching"
            app:summaryOff="@string/pref_framerate_matching_off"
            app:summaryOn="@string/pref_framerate_matching_on"
            app:title="@string/pref_framerate_matching" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="autoPiP"
            app:summaryOff="@string/pref_auto_pip_off"
            app:summaryOn="@string/pref_auto_pip_on"
            app:title="@string/pref_auto_pip" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="skipSilence"
            app:summaryOff="@string/pref_skip_silence_off"
            app:summaryOn="@string/pref_skip_silence_on"
            app:title="@string/pref_skip_silence" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="repeatToggle"
            app:summary="@string/pref_repeat_toggle_summary"
            app:title="@string/pref_repeat_toggle" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_language_header">

        <ListPreference
            android:defaultValue="default"
            app:iconSpaceReserved="false"
            app:key="languageSubtitle"
            app:title="@string/pref_language_subtitle"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="device"
            app:iconSpaceReserved="false"
            app:key="languageAudio"
            app:title="@string/pref_language_audio"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_dangerous_header">

        <Preference
            app:iconSpaceReserved="false"
            app:selectable="false"
            app:summary="@string/pref_dangerous_warning" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/decoder_priority_entries"
            app:entryValues="@array/decoder_priority_values"
            app:iconSpaceReserved="false"
            app:key="decoderPriority"
            app:title="@string/pref_decoder_priority"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="tunneling"
            app:summary="@string/pref_tunneling_summary"
            app:title="@string/pref_tunneling" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="mapDV7ToHevc"
            app:summaryOff="@string/pref_map_dv7_off"
            app:summaryOn="@string/pref_map_dv7_on"
            app:title="@string/pref_map_dv7" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_shortcuts_header">

        <Preference
            app:iconSpaceReserved="false"
            app:title="@string/pref_captioning_preferences">
            <intent android:action="android.settings.CAPTIONING_SETTINGS" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>